SKIE/acceptance-tests/functional/src/test/resources/tests/functions/deprecation/error/global/function/A.kt
package `tests`.`functions`.`deprecation`.`error`.`global`.`function`

@Deprecated("Some error", level = DeprecationLevel.ERROR)
fun foo() {
}
